updating dynamo client as well as kafka versions